fix page overflow and apply selected skill

--- a/src/components/ProfileSetup/ProfileSetup.css
+++ b/src/components/ProfileSetup/ProfileSetup.css
@@ -1,3 +1,20 @@
+.profile-setup-container {
+  display: grid;
+  grid-template-columns: 65% 35%;
+  height: 100vh;
+}
+
 .profile-setup-wrapper {
-    padding: 60px 40px;
+  grid-column: 1/2;
+  height: 100vh - 120px;
+  overflow-y: scroll;
+  padding: 60px 40px;
+}
+
+.quick-view-wrapper {
+  grid-column: 2/3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10%;
 }
