--- a/src/components/ProfileSetupForm/ProfileSetupForm.css
+++ b/src/components/ProfileSetupForm/ProfileSetupForm.css
@@ -74,6 +74,7 @@
   grid-template-areas:
     "skill years learn level"
     "description description description description";
+  align-items: center;
 }
 
 #profile-setup-skill-selected {
